Update to Py3 using 2to3_nb

--- a/filled/lesson1_rulebased_filled.ipynb
+++ b/filled/lesson1_rulebased_filled.ipynb
@@ -58,15 +58,15 @@
    ],
    "source": [
     "# Print the number of tweets in the list\n",
-    "print len(tweets)\n",
+    "print(len(tweets))\n",
     "\n",
     "# Assign the 10th tweet to the variable \"tweet\" and print tweet\n",
     "tweet = tweets[10]\n",
-    "print tweet\n",
+    "print(tweet)\n",
     "\n",
     "# To view the category of this tweet, we access tweet.category\n",
     "# (This is called an attribute).\n",
-    "print tweet.category"
+    "print(tweet.category)"
    ]
   },
   {
@@ -97,7 +97,7 @@
     "        if token==\"#\":\n",
     "            hashtags[t[idx+1]] += 1\n",
     "\n",
-    "print hashtags.most_common(10)"
+    "print(hashtags.most_common(10))"
    ]
   },
   {
@@ -15858,10 +15858,10 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing:\"\n",
+    "print(\"Testing:\")\n",
     "for x in [3,-4,6.5,0]:\n",
-    "    print str(x) + \" -> \" + str(square_minus_1(x)),\n",
-    "    print \"CORRECT\" if square_minus_1(x)==(x**2-1) else \"INCORRECT\""
+    "    print(str(x) + \" -> \" + str(square_minus_1(x)), end=' ')\n",
+    "    print(\"CORRECT\" if square_minus_1(x)==(x**2-1) else \"INCORRECT\")"
    ]
   },
   {
@@ -15914,10 +15914,10 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing:\"\n",
+    "print(\"Testing:\")\n",
     "for word in [\"computer\", \"science\", \"lesson\"]:\n",
-    "    print \"%s ->\"%word, contains_ss(word),\n",
-    "    print \"CORRECT\" if contains_ss(word)==(\"ss\" in word) else \"INCORRECT\""
+    "    print(\"%s ->\"%word, contains_ss(word), end=' ')\n",
+    "    print(\"CORRECT\" if contains_ss(word)==(\"ss\" in word) else \"INCORRECT\")"
    ]
   },
   {
@@ -15997,10 +15997,10 @@
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
-    "print \"Testing:\"\n",
+    "print(\"Testing:\")\n",
     "for (score,g) in [(77,\"C\"),(80,\"B\"),(32,\"F\"),(100,\"A\"),(69,\"D\")]:\n",
-    "    print \"%i -> %s\" % (score, grade(score)),\n",
-    "    print \"CORRECT\" if grade(score)==g else \"INCORRECT\""
+    "    print(\"%i -> %s\" % (score, grade(score)), end=' ')\n",
+    "    print(\"CORRECT\" if grade(score)==g else \"INCORRECT\")"
    ]
   },
   {
@@ -20087,7 +20087,7 @@
    ],
    "source": [
     "food_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet))"
    ]
   },
   {
@@ -20113,7 +20113,7 @@
    ],
    "source": [
     "energy_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet))"
    ]
   },
   {
@@ -20139,7 +20139,7 @@
    ],
    "source": [
     "water_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet))"
    ]
   },
   {
@@ -20165,7 +20165,7 @@
    ],
    "source": [
     "medical_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet))"
    ]
   },
   {
@@ -20197,7 +20197,7 @@
    ],
    "source": [
     "not_food_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_food_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_food_tweet))"
    ]
   },
   {
@@ -20223,7 +20223,7 @@
    ],
    "source": [
     "not_energy_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_energy_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_energy_tweet))"
    ]
   },
   {
@@ -20249,7 +20249,7 @@
    ],
    "source": [
     "not_water_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_water_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_water_tweet))"
    ]
   },
   {
@@ -20275,28 +20275,27 @@
    ],
    "source": [
     "not_medical_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_medical_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_medical_tweet))"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
