--- a/filled/lesson2_evaluation_filled.ipynb
+++ b/filled/lesson2_evaluation_filled.ipynb
@@ -98,7 +98,7 @@
     "# Exercise 1(a).\n",
     "# Create a list called \"my_numbers\" that contains the numbers from 0 to 6 (inclusive) and then print it\n",
     "my_numbers = [0,1,2,3,4,5,6]\n",
-    "print my_numbers"
+    "print(my_numbers)"
    ]
   },
   {
@@ -119,8 +119,8 @@
     "# Now use the range() function to create \"my_numbers\", and print the result.\n",
     "# It should match the previous cell.\n",
     "# Hint: look carefully at the range(10) example above.\n",
-    "my_numbers = range(7)\n",
-    "print my_numbers"
+    "my_numbers = list(range(7))\n",
+    "print(my_numbers)"
    ]
   },
   {
@@ -170,7 +170,7 @@
     "# Write a for-loop that iterates through my_numbers, and prints the square of each number\n",
     "# You should see the following numbers print out, one per line: 0, 1, 4, 9, 16, 25, 36\n",
     "for n in my_numbers:\n",
-    "    print n*n"
+    "    print(n*n)"
    ]
   },
   {
@@ -200,8 +200,8 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: sum_squares = %i\" % sum_squares\n",
-    "print \"CORRECT\" if sum_squares==91 else \"INCORRECT\""
+    "print(\"Testing: sum_squares = %i\" % sum_squares)\n",
+    "print(\"CORRECT\" if sum_squares==91 else \"INCORRECT\")"
    ]
   },
   {
@@ -263,8 +263,8 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: num_weasleys = %i\" % num_weasleys\n",
-    "print \"CORRECT\" if num_weasleys==5 else \"INCORRECT\""
+    "print(\"Testing: num_weasleys = %i\" % num_weasleys)\n",
+    "print(\"CORRECT\" if num_weasleys==5 else \"INCORRECT\")"
    ]
   },
   {
@@ -321,8 +321,8 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: num_cats = %i\" % num_cats\n",
-    "print \"CORRECT\" if num_cats==4 else \"INCORRECT\""
+    "print(\"Testing: num_cats = %i\" % num_cats)\n",
+    "print(\"CORRECT\" if num_cats==4 else \"INCORRECT\")"
    ]
   },
   {
@@ -353,8 +353,8 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: num_unusual = %i\" % num_unusual\n",
-    "print \"CORRECT\" if num_unusual==3 else \"INCORRECT\""
+    "print(\"Testing: num_unusual = %i\" % num_unusual)\n",
+    "print(\"CORRECT\" if num_unusual==3 else \"INCORRECT\")"
    ]
   },
   {
@@ -440,11 +440,11 @@
     "        f1 = 2*precision*recall / (precision + recall)\n",
     "\n",
     "    # Print the category name, Precision, Recall and F1\n",
-    "    print c\n",
-    "    print \"Precision: \", precision\n",
-    "    print \"Recall: \", recall\n",
-    "    print \"F1: \", f1\n",
-    "    print \"\" \n",
+    "    print(c)\n",
+    "    print(\"Precision: \", precision)\n",
+    "    print(\"Recall: \", recall)\n",
+    "    print(\"F1: \", f1)\n",
+    "    print(\"\") \n",
     "\n",
     "    # Return the F1 score\n",
     "    return f1\n",
@@ -482,7 +482,7 @@
    ],
    "source": [
     "average_f1 = (food_f1 + water_f1 + energy_f1 + medical_f1 + none_f1)/5\n",
-    "print \"Average F1: \", average_f1"
+    "print(\"Average F1: \", average_f1)"
    ]
   },
   {
@@ -4550,21 +4550,20 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
