--- a/filled/lesson3_naivebayes_exercises.ipynb
+++ b/filled/lesson3_naivebayes_exercises.ipynb
@@ -52,8 +52,8 @@
     "# This function returns box1 and box2, both lists of colors of the balls in each box\n",
     "box1, box2 = lib.get_box_contents()\n",
     "\n",
-    "print \"Number of balls in box 1: %d\" % len(box1)\n",
-    "print \"Number of balls in box 2: %d\" % len(box2)\n"
+    "print(\"Number of balls in box 1: %d\" % len(box1))\n",
+    "print(\"Number of balls in box 2: %d\" % len(box2))\n"
    ]
   },
   {
@@ -115,8 +115,8 @@
     "           \"The Hunger Games\": \"Suzanne Collins\", \"Never Let Me Go\": \"Kazuo Ishiguro\",\n",
     "           \"The Catcher in the Rye\": \"J.D. Salinger\"}\n",
     "\n",
-    "print authors[\"The Catcher in the Rye\"]\n",
-    "print authors[\"Harry Potter\"]\n",
+    "print(authors[\"The Catcher in the Rye\"])\n",
+    "print(authors[\"Harry Potter\"])\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -205,7 +205,7 @@
     "  alphabet[letter] = pos\n",
     "  pos += 1\n",
     "\n",
-    "print alphabet\n",
+    "print(alphabet)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "    \n",
@@ -219,7 +219,7 @@
     "for pos, letter in enumerate(letters):\n",
     "    alphabet[letter] = pos + 1\n",
     "\n",
-    "print alphabet\n",
+    "print(alphabet)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -287,7 +287,7 @@
     "        fruit_counts[fruit] = 0\n",
     "    fruit_counts[fruit] +=1\n",
     "\n",
-    "print fruit_counts\n",
+    "print(fruit_counts)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -351,7 +351,7 @@
     "for fruit in fruit_basket:\n",
     "    fruit_counts[fruit] +=1\n",
     "\n",
-    "print fruit_counts\n",
+    "print(fruit_counts)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n"
@@ -398,7 +398,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "fruit_counts = Counter(fruit_basket)\n",
-    "print fruit_counts\n",
+    "print(fruit_counts)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n"
    ]
@@ -506,11 +506,11 @@
     "for pet in fractions:\n",
     "    fractions[pet] /= total\n",
     "\n",
-    "print fractions\n",
+    "print(fractions)\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: fraction of cats = %.1f\" % fractions[\"cat\"]\n",
-    "print \"CORRECT\" if fractions[\"cat\"] ==.4 else \"INCORRECT\""
+    "print(\"Testing: fraction of cats = %.1f\" % fractions[\"cat\"])\n",
+    "print(\"CORRECT\" if fractions[\"cat\"] ==.4 else \"INCORRECT\")"
    ]
   },
   {
@@ -546,8 +546,8 @@
    ],
    "source": [
     "#### YOUR CODE STARTS HERE ####\n",
-    "print Counter(box1)\n",
-    "print Counter(box2)\n",
+    "print(Counter(box1))\n",
+    "print(Counter(box2))\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n"
@@ -662,17 +662,17 @@
     "\n",
     "\n",
     "\n",
-    "print \"Balls in Box 1:\"\n",
-    "print Counter(box1)\n",
-    "print \"Balls in Box 2:\"\n",
-    "print Counter(box2)\n",
+    "print(\"Balls in Box 1:\")\n",
+    "print(Counter(box1))\n",
+    "print(\"Balls in Box 2:\")\n",
+    "print(Counter(box2))\n",
     "\n",
-    "print \"\"\n",
+    "print(\"\")\n",
     "\n",
     "colors = [\"red\", \"green\", \"blue\", \"yellow\", \"orange\"]\n",
     "\n",
     "for color in colors:\n",
-    "    print \"A %s ball most likely came from %s\" % (color, likeliest_box(color))\n"
+    "    print(\"A %s ball most likely came from %s\" % (color, likeliest_box(color)))\n"
    ]
   },
   {
@@ -758,12 +758,12 @@
     "\n",
     "\n",
     "\n",
-    "print \"Balls in Box 1:\"\n",
-    "print Counter(box1)\n",
-    "print \"Balls in Box 2:\"\n",
-    "print Counter(box2)\n",
+    "print(\"Balls in Box 1:\")\n",
+    "print(Counter(box1))\n",
+    "print(\"Balls in Box 2:\")\n",
+    "print(Counter(box2))\n",
     "\n",
-    "print \"\"\n",
+    "print(\"\")\n",
     "\n",
     "sequences = [[\"red\"], [\"green\"], [\"blue\"], [\"yellow\"], [\"orange\"],\n",
     "            [\"red\", \"red\", \"green\"],\n",
@@ -774,7 +774,7 @@
     "            [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
     "\n",
     "for seq in sequences:\n",
-    "    print \"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq))\n"
+    "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
    ]
   },
   {
@@ -829,7 +829,7 @@
     "boxes = lib.get_box_contents(n_boxes = number_of_boxes)\n",
     "\n",
     "for i, box in enumerate(boxes):\n",
-    "    print \"Box %d has %d balls.\" % (i + 1, len(box))\n",
+    "    print(\"Box %d has %d balls.\" % (i + 1, len(box)))\n",
     "    \n",
     "    \n",
     "#### YOUR CODE STARTS HERE ####\n",
@@ -881,28 +881,27 @@
     "            [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
     "\n",
     "for seq in sequences:\n",
-    "    print \"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq))\n"
+    "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
