--- a/filled/lesson5_naivebayes.ipynb
+++ b/filled/lesson5_naivebayes.ipynb
@@ -136,12 +136,12 @@
     "    # Remember that when you iterate over a dictionary/Counter, you access the keys.\n",
     "    # You'll need to use the variable num_tweets_about_c.\n",
     "    # Be careful when you divide integers!\n",
-    "    for token,count in token_counts.iteritems():\n",
+    "    for token,count in token_counts.items():\n",
     "        token_probs[token] = float(count)/num_tweets_about_c\n",
     "\n",
     "    \n",
     "    \n",
-    "    print \"Class %s has prior probability %.2f\" % (c, prob_c)    \n",
+    "    print(\"Class %s has prior probability %.2f\" % (c, prob_c))    \n",
     "    return prob_c, token_probs\n",
     "\n",
     "\n",
@@ -189,7 +189,7 @@
     "    \n",
     "    ##### YOUR CODE ENDS HERE ####\n",
     "            \n",
-    "    print \"Class %s has prior probability %.2f\" % (c, prob_c)\n",
+    "    print(\"Class %s has prior probability %.2f\" % (c, prob_c))\n",
     "    \n",
     "    ##### OPTIONAL EXERCISE STARTS HERE ####\n",
     "    \n",
@@ -371,7 +371,7 @@
     "# Can you see what went wrong? How might you fix it?\n",
     "\n",
     "riverdale_tweet = lib.Tweet(\"No power in Riverdale\", \"Energy\", \"need\")\n",
-    "print \"P(Energy|'No power in Riverdale') = \", get_posterior_prob(riverdale_tweet, prob_energy, token_probs_energy)"
+    "print(\"P(Energy|'No power in Riverdale') = \", get_posterior_prob(riverdale_tweet, prob_energy, token_probs_energy))"
    ]
   },
   {
@@ -4578,21 +4578,20 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
