--- a/filled/lesson6_visualization.ipynb
+++ b/filled/lesson6_visualization.ipynb
@@ -91,10 +91,10 @@
     "tweets, test_tweets = lib.read_data()\n",
     "for tweet in tweets+test_tweets:\n",
     "    add_bigrams(tweet)\n",
-    "print \"Checking if bigrams are correct...\"\n",
+    "print(\"Checking if bigrams are correct...\")\n",
     "for tweet in tweets+test_tweets:\n",
     "    assert tweet._bigramList==tweet.bigramList, \"Error in your implementation of the bigram list!\"\n",
-    "print \"Bigrams are correct.\\n\"\n",
+    "print(\"Bigrams are correct.\\n\")\n",
     "\n",
     "prior_probs, token_probs = lib.learn_nb(tweets)\n",
     "predictions = [(tweet, lib.classify_nb(tweet, prior_probs, token_probs)) for tweet in test_tweets]\n",
@@ -486,21 +486,20 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
