--- a/lesson1_rulebased.ipynb
+++ b/lesson1_rulebased.ipynb
@@ -9,10 +9,10 @@
    "outputs": [],
    "source": [
     "# Run this every time you open the spreadsheet\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "% load_ext autoreload\n",
+    "% autoreload 2\n",
     "from collections import Counter\n",
-    "import lib"
+    "import lib\n"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# Load the data.\n",
-    "tweets, test_tweets = lib.read_data()"
+    "tweets, test_tweets = lib.read_data()\n"
    ]
   },
   {
@@ -97,10 +97,10 @@
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing:\"\n",
+    "print(\"Testing:\")\n",
     "for x in [3,-4,6.5,0]:\n",
-    "    print str(x) + \" -> \" + str(square_minus_1(x)),\n",
-    "    print \"CORRECT\" if square_minus_1(x)==(x**2-1) else \"INCORRECT\""
+    "    print(str(x) + \" -> \" + str(square_minus_1(x)))\n",
+    "    print(\"CORRECT\" if square_minus_1(x)==(x**2-1) else \"INCORRECT\")"
    ]
   },
   {
@@ -135,13 +135,12 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing:\"\n",
+    "print(\"Testing:\")\n",
     "for word in [\"computer\", \"science\", \"lesson\"]:\n",
-    "    print \"%s ->\"%word, contains_ss(word),\n",
-    "    print \"CORRECT\" if contains_ss(word)==(\"ss\" in word) else \"INCORRECT\""
+    "    print(\"%s ->\" % word, contains_ss(word))\n",
+    "    print(\"CORRECT\" if contains_ss(word) == (\"ss\" in word) else \"INCORRECT\")\n"
    ]
   },
   {
@@ -192,14 +191,13 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
-    "print \"Testing:\"\n",
-    "for (score,g) in [(77,\"C\"),(80,\"B\"),(32,\"F\"),(100,\"A\"),(69,\"D\")]:\n",
-    "    print \"%i -> %s\" % (score, grade(score)),\n",
-    "    print \"CORRECT\" if grade(score)==g else \"INCORRECT\""
+    "print(\"Testing:\")\n",
+    "for (score, g) in [(77, \"C\"), (80, \"B\"), (32, \"F\"), (100, \"A\"), (69, \"D\")]:\n",
+    "    print(\"%i -> %s\" % (score, grade(score)))\n",
+    "    print(\"CORRECT\" if grade(score) == g else \"INCORRECT\")\n"
    ]
   },
   {
@@ -225,19 +223,18 @@
    "outputs": [],
    "source": [
     "def classify_rb(tweet):\n",
-    "    \n",
-    "  tweet = str(tweet).lower() # this makes the tweet lower-case, so we don't have to worry about matching case\n",
+    "    tweet = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
     "\n",
-    "  if ________:\n",
-    "    return \"Medical\"\n",
-    "  elif ________:\n",
-    "    return \"Energy\"\n",
-    "  elif ________:\n",
-    "    return \"Water\"\n",
-    "  elif ________:\n",
-    "    return \"Food\"\n",
-    "  else:\n",
-    "    return \"None\""
+    "    if ________:\n",
+    "        return \"Medical\"\n",
+    "    elif ________:\n",
+    "        return \"Energy\"\n",
+    "    elif ________:\n",
+    "        return \"Water\"\n",
+    "    elif ________:\n",
+    "        return \"Food\"\n",
+    "    else:\n",
+    "        return \"None\"\n"
    ]
   },
   {
@@ -260,9 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets] # a list of (tweet, prediction) pairs\n",
+    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets]  # a list of (tweet, prediction) pairs\n",
     "\n",
-    "lib.show_predictions(predictions, True)"
+    "lib.show_predictions(predictions, True)\n"
    ]
   },
   {
@@ -283,8 +280,8 @@
    "outputs": [],
    "source": [
     "def classify_rb_game(tweet):\n",
-    "    \n",
-    "    # Copy to here the body of the function classify_rb from above"
+    "    # Copy to here the body of the function classify_rb from above\n",
+    "    pass\n"
    ]
   },
   {
@@ -307,7 +304,7 @@
    "outputs": [],
    "source": [
     "food_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet))\n"
    ]
   },
   {
@@ -324,7 +321,7 @@
    "outputs": [],
    "source": [
     "energy_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet))\n"
    ]
   },
   {
@@ -341,7 +338,7 @@
    "outputs": [],
    "source": [
     "water_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet))\n"
    ]
   },
   {
@@ -358,7 +355,7 @@
    "outputs": [],
    "source": [
     "medical_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet))\n"
    ]
   },
   {
@@ -385,7 +382,7 @@
    "outputs": [],
    "source": [
     "not_food_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_food_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_food_tweet))\n"
    ]
   },
   {
@@ -402,7 +399,7 @@
    "outputs": [],
    "source": [
     "not_energy_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_energy_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_energy_tweet))\n"
    ]
   },
   {
@@ -419,7 +416,7 @@
    "outputs": [],
    "source": [
     "not_water_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_water_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_water_tweet))\n"
    ]
   },
   {
@@ -436,17 +433,8 @@
    "outputs": [],
    "source": [
     "not_medical_tweet = \"\"\n",
-    "print \"This tweet is classified as: %s\\n\" % classify_rb_game(not_medical_tweet)"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(not_medical_tweet))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
