--- a/lesson6_visualization.ipynb
+++ b/lesson6_visualization.ipynb
@@ -35,29 +35,28 @@
    "outputs": [],
    "source": [
     "def add_bigrams(tweet):\n",
-    "    # Currently, tweet has an attribute called tweet.tokenList which is a list of tokens.\n",
-    "    # You want to add a new attribute to tweet called tweet.bigramList which is a list of bigrams.\n",
-    "    # Each bigram should be a pair of strings. You can define the bigram like this: bigram = (token1, token2).\n",
-    "    # In Python, this is called a tuple. You can read more about tuples here: https://www.programiz.com/python-programming/tuple\n",
+    "# Currently, tweet has an attribute called tweet.tokenList which is a list of tokens.\n",
+    "# You want to add a new attribute to tweet called tweet.bigramList which is a list of bigrams.\n",
+    "# Each bigram should be a pair of strings. You can define the bigram like this: bigram = (token1, token2).\n",
+    "# In Python, this is called a tuple. You can read more about tuples here: https://www.programiz.com/python-programming/tuple\n",
     "\n",
-    "    ##### YOUR CODE STARTS HERE #####\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    ##### YOUR CODE ENDS HERE #####\n",
+    "##### YOUR CODE STARTS HERE #####\n",
+    "\n",
+    "\n",
+    "##### YOUR CODE ENDS HERE #####\n",
     "\n",
     "\n",
     "tweets, test_tweets = lib.read_data()\n",
-    "for tweet in tweets+test_tweets:\n",
+    "for tweet in tweets + test_tweets:\n",
     "    add_bigrams(tweet)\n",
-    "print \"Checking if bigrams are correct...\"\n",
-    "for tweet in tweets+test_tweets:\n",
-    "    assert tweet._bigramList==tweet.bigramList, \"Error in your implementation of the bigram list!\"\n",
-    "print \"Bigrams are correct.\\n\"\n",
+    "print(\"Checking if bigrams are correct...\")\n",
+    "for tweet in tweets + test_tweets:\n",
+    "    assert tweet._bigramList == tweet.bigramList, \"Error in your implementation of the bigram list!\"\n",
+    "print(\"Bigrams are correct.\\n\")\n",
     "\n",
     "prior_probs, token_probs = lib.learn_nb(tweets)\n",
     "predictions = [(tweet, lib.classify_nb(tweet, prior_probs, token_probs)) for tweet in test_tweets]\n",
-    "lib.evaluate(predictions)"
+    "lib.evaluate(predictions)\n"
    ]
   },
   {
@@ -78,7 +77,7 @@
     "tweets, test_tweets = lib.read_data()\n",
     "prior_probs, token_probs = lib.learn_nb(tweets)\n",
     "predictions = [(tweet, lib.classify_nb(tweet, prior_probs, token_probs)) for tweet in test_tweets]\n",
-    "lib.evaluate(predictions)"
+    "lib.evaluate(predictions)\n"
    ]
   },
   {
@@ -100,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib.most_discriminative(tweets, token_probs, prior_probs)"
+    "lib.most_discriminative(tweets, token_probs, prior_probs)\n"
    ]
   },
   {
@@ -123,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib.show_confusion_matrix(predictions)"
+    "lib.show_confusion_matrix(predictions)\n"
    ]
   },
   {
@@ -149,7 +148,7 @@
     "# Hover your mouse over the words!\n",
     "\n",
     "random_tweet = random.choice(test_tweets)\n",
-    "lib.visualize_tweet(random_tweet, prior_probs, token_probs)"
+    "lib.visualize_tweet(random_tweet, prior_probs, token_probs)\n"
    ]
   },
   {
@@ -169,7 +168,7 @@
    "source": [
     "my_tweet = \"I urgently need some bottled water.\"\n",
     "\n",
-    "lib.visualize_tweet(lib.Tweet(my_tweet, \"?\", \"\"), prior_probs, token_probs)"
+    "lib.visualize_tweet(lib.Tweet(my_tweet, \"?\", \"\"), prior_probs, token_probs)\n"
    ]
   },
   {
@@ -189,21 +188,20 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
