--- a/filled/lesson4_languagemodel.ipynb
+++ b/filled/lesson4_languagemodel.ipynb
@@ -96,12 +96,12 @@
     "total_count = len(words)\n",
     "\n",
     "\n",
-    "print \"Total number of words in corpus: \", total_count\n",
+    "print(\"Total number of words in corpus: \", total_count)\n",
     "\n",
     "# Print 10 most common words\n",
-    "print \"\\nTop 10 most common words: \"\n",
+    "print(\"\\nTop 10 most common words: \")\n",
     "for (word, count) in unigram_counts.most_common(n=10):\n",
-    "    print word, count"
+    "    print(word, count)"
    ]
   },
   {
@@ -148,12 +148,12 @@
     "\n",
     "\n",
     "# Check the probabilities add up to 1\n",
-    "print \"Probabilities sum to: \", sum(unigram_probs.values())\n",
+    "print(\"Probabilities sum to: \", sum(unigram_probs.values()))\n",
     "\n",
     "# Print 10 most common words\n",
-    "print \"\\nTop 10 most common words: \"\n",
+    "print(\"\\nTop 10 most common words: \")\n",
     "for (word, count) in unigram_probs.most_common(n=10):\n",
-    "    print word, \"%.5f\"%count"
+    "    print(word, \"%.5f\"%count)"
    ]
   },
   {
@@ -171,7 +171,7 @@
    ],
    "source": [
     "# Print the probability of word \"the\", then try some other words.\n",
-    "print unigram_probs['the']"
+    "print(unigram_probs['the'])"
    ]
   },
   {
@@ -198,13 +198,13 @@
     "    \n",
     "    # Find the word whose \"interval\" contains r\n",
     "    accumulator = .0\n",
-    "    for word, freq in unigram_probs.iteritems():\n",
+    "    for word, freq in unigram_probs.items():\n",
     "        accumulator += freq\n",
     "        if accumulator >= r:\n",
     "            text.append(word)\n",
     "            break\n",
     "\n",
-    "print ' '.join(text)"
+    "print(' '.join(text))"
    ]
   },
   {
@@ -249,7 +249,7 @@
    ],
    "source": [
     "# Print how often the bigram \"of the\" occurs. Try some other words following \"of\".\n",
-    "print bigram_counts['of']['the']"
+    "print(bigram_counts['of']['the'])"
    ]
   },
   {
@@ -264,7 +264,7 @@
     "bigram_probs = defaultdict(lambda: Counter())\n",
     "for w1 in bigram_counts:\n",
     "    total_count = float(sum(bigram_counts[w1].values()))\n",
-    "    bigram_probs[w1] = Counter({w2: c/total_count for w2,c in bigram_counts[w1].iteritems()})"
+    "    bigram_probs[w1] = Counter({w2: c/total_count for w2,c in bigram_counts[w1].items()})"
    ]
   },
   {
@@ -282,7 +282,7 @@
    ],
    "source": [
     "# Print the probability that 'the' follows 'of'\n",
-    "print bigram_probs['of']['the']"
+    "print(bigram_probs['of']['the'])"
    ]
   },
   {
@@ -312,7 +312,7 @@
     "# Try some other words.\n",
     "prob_dist = bigram_probs['fair']\n",
     "for word,prob in prob_dist.most_common(10):\n",
-    "    print word,\"%.5f\"%prob"
+    "    print(word,\"%.5f\"%prob)"
    ]
   },
   {
@@ -343,7 +343,7 @@
     "    prob_dist = bigram_probs[latest_token] # prob dist of what token comes next\n",
     "    \n",
     "    # Find the word whose \"interval\" contains the random number r.\n",
-    "    for word,p in prob_dist.iteritems():\n",
+    "    for word,p in prob_dist.items():\n",
     "        accumulator += p \n",
     "        if accumulator >= r:\n",
     "            text.append(word)\n",
@@ -352,7 +352,7 @@
     "    if text[-1] == None:\n",
     "        sentence_finished = True\n",
     "\n",
-    "print ' '.join([t for t in text if t])"
+    "print(' '.join([t for t in text if t]))"
    ]
   },
   {
@@ -399,7 +399,7 @@
    ],
    "source": [
     "# Print how often the trigram \"I am not\" occurs. Try some other trigrams.\n",
-    "print trigram_counts[('i', 'am')]['not']"
+    "print(trigram_counts[('i', 'am')]['not'])"
    ]
   },
   {
@@ -414,7 +414,7 @@
     "trigram_probs = defaultdict(lambda: Counter())\n",
     "for w1_w2 in trigram_counts:\n",
     "    total_count = float(sum(trigram_counts[w1_w2].values()))\n",
-    "    trigram_probs[w1_w2] = Counter({w3: c/total_count for w3,c in trigram_counts[w1_w2].iteritems()})"
+    "    trigram_probs[w1_w2] = Counter({w3: c/total_count for w3,c in trigram_counts[w1_w2].items()})"
    ]
   },
   {
@@ -432,7 +432,7 @@
    ],
    "source": [
     "# Print the probability that 'not' follows 'i am'. Try some other combinations.\n",
-    "print trigram_probs[('i', 'am')]['not']"
+    "print(trigram_probs[('i', 'am')]['not'])"
    ]
   },
   {
@@ -462,7 +462,7 @@
     "# Try some other pairs of words.\n",
     "prob_dist = trigram_probs[('i', 'am')]\n",
     "for word,prob in prob_dist.most_common(10):\n",
-    "    print word,\"%.5f\"%prob"
+    "    print(word,\"%.5f\"%prob)"
    ]
   },
   {
@@ -493,7 +493,7 @@
     "    latest_bigram = tuple(text[-2:])\n",
     "    prob_dist = trigram_probs[latest_bigram] # prob dist of what token comes next\n",
     "    \n",
-    "    for word,p in prob_dist.iteritems():\n",
+    "    for word,p in prob_dist.items():\n",
     "        accumulator += p \n",
     "        if accumulator >= r:\n",
     "            text.append(word)\n",
@@ -502,7 +502,7 @@
     "    if text[-2:] == [None, None]:\n",
     "        sentence_finished = True\n",
     "\n",
-    "print ' '.join([t for t in text if t])"
+    "print(' '.join([t for t in text if t]))"
    ]
   },
   {
@@ -532,21 +532,20 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
