--- a/lesson2_evaluation.ipynb
+++ b/lesson2_evaluation.ipynb
@@ -9,9 +9,9 @@
    "outputs": [],
    "source": [
     "# Run this every time you open the spreadsheet\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import lib"
+    "% load_ext autoreload\n",
+    "% autoreload 2\n",
+    "import lib\n"
    ]
   },
   {
@@ -43,19 +43,18 @@
    "outputs": [],
    "source": [
     "def classify_rb(tweet):\n",
-    "    \n",
-    "  tweet = str(tweet).lower() # this makes the tweet lower-case, so we don't have to worry about matching case\n",
+    "    tweet = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
     "\n",
-    "  if \"medicine\" in tweet or \"first aid\" in tweet:\n",
-    "    return \"Medical\"\n",
-    "  elif \"power\" in tweet or \"battery\" in tweet:\n",
-    "    return \"Energy\"\n",
-    "  elif \"water\" in tweet or \"bottled\" in tweet:\n",
-    "    return \"Water\"\n",
-    "  elif \"food\" in tweet or \"perishable\" in tweet or \"canned\" in tweet:\n",
-    "    return \"Food\"\n",
-    "  else:\n",
-    "    return \"None\""
+    "    if \"medicine\" in tweet or \"first aid\" in tweet:\n",
+    "        return \"Medical\"\n",
+    "    elif \"power\" in tweet or \"battery\" in tweet:\n",
+    "        return \"Energy\"\n",
+    "    elif \"water\" in tweet or \"bottled\" in tweet:\n",
+    "        return \"Water\"\n",
+    "    elif \"food\" in tweet or \"perishable\" in tweet or \"canned\" in tweet:\n",
+    "        return \"Food\"\n",
+    "    else:\n",
+    "        return \"None\"\n"
    ]
   },
   {
@@ -159,11 +158,10 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: sum_squares = %i\" % sum_squares\n",
-    "print \"CORRECT\" if sum_squares==91 else \"INCORRECT\""
+    "print(\"Testing: sum_squares = %i\" % sum_squares)\n",
+    "print(\"CORRECT\" if sum_squares == 91 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -205,16 +203,16 @@
     "# Count the number of Weasleys in the list of characters, and save the result to the variable \"num_weasleys\".\n",
     "# Use incrementation with the \"x += 1\" notation.\n",
     "\n",
-    "characters = ['Harry Potter', 'Ron Weasley', 'Albus Dumbledore', 'Ginny Weasley', 'Percy Weasley', 'Hermione Granger', 'Fred Weasley', 'George Weasley']\n",
+    "characters = ['Harry Potter', 'Ron Weasley', 'Albus Dumbledore', 'Ginny Weasley', 'Percy Weasley', 'Hermione Granger',\n",
+    "              'Fred Weasley', 'George Weasley']\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: num_weasleys = %i\" % num_weasleys\n",
-    "print \"CORRECT\" if num_weasleys==5 else \"INCORRECT\""
+    "print(\"Testing: num_weasleys = %i\" % num_weasleys)\n",
+    "print(\"CORRECT\" if num_weasleys == 5 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -252,16 +250,13 @@
     "\n",
     "my_pets = ['cat', 'lizard', 'cat', 'dog', 'cat', 'snake', 'dog', 'cat', 'dog', 'parrot']\n",
     "\n",
-    "\n",
     "#### YOUR CODE STARTS HERE ####\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: num_cats = %i\" % num_cats\n",
-    "print \"CORRECT\" if num_cats==4 else \"INCORRECT\""
+    "print(\"Testing: num_cats = %i\" % num_cats)\n",
+    "print(\"CORRECT\" if num_cats == 4 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -277,11 +272,10 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: num_unusual = %i\" % num_unusual\n",
-    "print \"CORRECT\" if num_unusual==3 else \"INCORRECT\""
+    "print(\"Testing: num_unusual = %i\" % num_unusual)\n",
+    "print(\"CORRECT\" if num_unusual == 3 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -307,7 +301,7 @@
     "    Returns:\n",
     "        The F1 score.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Initialize variables to count the number of true positives, false positives and false negatives\n",
     "    true_positives = 0.0\n",
     "    false_positives = 0.0\n",
@@ -316,24 +310,22 @@
     "    # Iterate through the tweets, counting the number of true positives, false positives and false negatives\n",
     "    for (tweet, predicted_category) in predictions:\n",
     "        true_category = tweet.category\n",
-    "        \n",
+    "\n",
     "        # Hint: true positives for category c are tweets that have \n",
     "        # true category c and predicted category c\n",
-    "        if ___________: \n",
+    "        if ___________:\n",
     "            true_positives += 1\n",
-    "            \n",
+    "\n",
     "        # Finish the statement: false negatives for category c are tweets that have \n",
     "        # true category ___ and predicted category ___\n",
     "        elif ___________:\n",
     "            false_negatives += 1\n",
-    "        \n",
+    "\n",
     "        # Finish the statement: false positives for category c are tweets that have \n",
     "        # true category ___ and predicted category ___\n",
     "        elif ___________:\n",
     "            false_positives += 1\n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "\n",
     "    # Before we calculate Precision, Recall and F1 we need to check whether true_positives = 0. Why?\n",
     "    if true_positives == 0:\n",
     "        precision = 0.0\n",
@@ -347,24 +339,24 @@
     "        f1 = ___________\n",
     "\n",
     "    # Print the category name, Precision, Recall and F1\n",
-    "    print c\n",
-    "    print \"Precision: \", precision\n",
-    "    print \"Recall: \", recall\n",
-    "    print \"F1: \", f1\n",
-    "    print \"\" \n",
+    "    print(c)\n",
+    "    print(\"Precision: \", precision)\n",
+    "    print(\"Recall: \", recall)\n",
+    "    print(\"F1: \", f1)\n",
+    "    print(\"\")\n",
     "\n",
     "    # Return the F1 score\n",
     "    return f1\n",
     "\n",
     "\n",
-    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets] # Make a list of (tweet, predicted_category) pairs\n",
+    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets]  # Make a list of (tweet, predicted_category) pairs\n",
     "\n",
     "# Get the F1 scores for each category\n",
     "food_f1 = evaluate(predictions, \"Food\")\n",
     "water_f1 = evaluate(predictions, \"Water\")\n",
     "energy_f1 = evaluate(predictions, \"Energy\")\n",
     "medical_f1 = evaluate(predictions, \"Medical\")\n",
-    "none_f1 = evaluate(predictions, \"None\")"
+    "none_f1 = evaluate(predictions, \"None\")\n"
    ]
   },
   {
@@ -381,7 +373,7 @@
    "outputs": [],
    "source": [
     "average_f1 = ___________\n",
-    "print \"Average F1: \", average_f1"
+    "print(\"Average F1: \", average_f1)\n"
    ]
   },
   {
@@ -401,7 +393,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib.show_confusion_matrix(predictions)"
+    "lib.show_confusion_matrix(predictions)\n"
    ]
   },
   {
@@ -417,28 +409,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib.show_predictions(predictions)"
+    "lib.show_predictions(predictions)\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
