--- a/lesson3_naivebayes_exercises.ipynb
+++ b/lesson3_naivebayes_exercises.ipynb
@@ -36,8 +36,8 @@
     "# This function returns box_a and box_b, both lists of colors of the balls in each box\n",
     "box_a, box_b = lib.get_box_contents()\n",
     "\n",
-    "print \"Number of balls in box A: %d\" % len(box_a)\n",
-    "print \"Number of balls in box B: %d\" % len(box_b)"
+    "print(\"Number of balls in box A: %d\" % len(box_a))\n",
+    "print(\"Number of balls in box B: %d\" % len(box_b))\n"
    ]
   },
   {
@@ -87,12 +87,11 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"CORRECT\" if authors[\"Harry Potter\"] == \"J.K. Rowling\" else \"INCORRECT\"\n",
-    "print \"CORRECT\" if authors[\"The Casual Vacancy\"] == \"J.K. Rowling\" else \"INCORRECT\"\n",
-    "print \"CORRECT\" if authors[\"Never Let Me Go\"] == \"Kazuo Ishiguro\" else \"INCORRECT\""
+    "print(\"CORRECT\" if authors[\"Harry Potter\"] == \"J.K. Rowling\" else \"INCORRECT\")\n",
+    "print(\"CORRECT\" if authors[\"The Casual Vacancy\"] == \"J.K. Rowling\" else \"INCORRECT\")\n",
+    "print(\"CORRECT\" if authors[\"Never Let Me Go\"] == \"Kazuo Ishiguro\" else \"INCORRECT\")\n"
    ]
   },
   {
@@ -187,17 +186,15 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "for product in prices:\n",
-    "    ......\n",
-    "    \n",
-    "\n",
+    "    pass\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print prices\n",
+    "print(prices)\n",
     "\n",
-    "print \"CORRECT\" if prices[\"spaghetti\"] == 2.75 else \"INCORRECT\"\n",
-    "print \"CORRECT\" if prices[\"milk\"] == 2.25 else \"INCORRECT\"\n",
-    "print \"CORRECT\" if prices[\"bread\"] == 3.50 else \"INCORRECT\""
+    "print(\"CORRECT\" if prices[\"spaghetti\"] == 2.75 else \"INCORRECT\")\n",
+    "print(\"CORRECT\" if prices[\"milk\"] == 2.25 else \"INCORRECT\")\n",
+    "print(\"CORRECT\" if prices[\"bread\"] == 3.50 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -215,11 +212,11 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "    \n",
+    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print prices\n",
-    "print \"CORRECT\" if prices[\"bananas\"] == 0.95 else \"INCORRECT\""
+    "print(prices)\n",
+    "print(\"CORRECT\" if prices[\"bananas\"] == 0.95 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -236,10 +233,10 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "    \n",
+    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print prices"
+    "print(prices)\n"
    ]
   },
   {
@@ -288,15 +285,13 @@
     "# Hint: Use a for-loop to iterate through all the items in fruit_basket.\n",
     "\n",
     "from collections import Counter\n",
+    "\n",
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### YOUR CODE ENDS HERE ####"
+    "#### YOUR CODE ENDS HERE ####\n"
    ]
   },
   {
@@ -327,13 +322,13 @@
     "# Re-implement the program from Exercise 3 without using a for-loop.\n",
     "\n",
     "from collections import Counter\n",
+    "\n",
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
-    "#### YOUR CODE ENDS HERE ####"
+    "#### YOUR CODE ENDS HERE ####\n"
    ]
   },
   {
@@ -385,8 +380,8 @@
     "\n",
     "# The following counter stores how many rooms of each type a hotel has.\n",
     "\n",
-    "hotel_rooms = Counter({\"1 queen-sized bed\": 25, \"1 king-sized bed\": 14, \n",
-    "                       \"2 queen-sized beds\": 12, \"Honeymoon suite\": 1, \n",
+    "hotel_rooms = Counter({\"1 queen-sized bed\": 25, \"1 king-sized bed\": 14,\n",
+    "                       \"2 queen-sized beds\": 12, \"Honeymoon suite\": 1,\n",
     "                       \"Presidential suite\": 1})\n",
     "\n",
     "# Write some code that prints each room type and how many rooms of each type there are. e.g., \"Presidential suite 1\"\n",
@@ -395,8 +390,7 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "#### YOUR CODE ENDS HERE ####\n",
-    "\n"
+    "#### YOUR CODE ENDS HERE ####\n"
    ]
   },
   {
@@ -447,13 +441,13 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "numbers = range(1,11)\n",
+    "numbers = list(range(1, 11))\n",
     "total = ...\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print total \n",
-    "print \"CORRECT\" if total == 55 else \"INCORRECT\""
+    "print(total)\n",
+    "print(\"CORRECT\" if total == 55 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -476,11 +470,10 @@
     "\n",
     "total = ...\n",
     "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print total \n",
-    "print \"CORRECT\" if total == 10 else \"INCORRECT\""
+    "print(total)\n",
+    "print(\"CORRECT\" if total == 10 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -525,16 +518,16 @@
     "# Exercise 7.\n",
     "# Divide each number in the following list by 2 and print it.\n",
     "\n",
-    "numbers = [3,5,6,7,9]\n",
+    "numbers = [3, 5, 6, 7, 9]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "for number in numbers:\n",
     "    ......\n",
-    "    \n",
+    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "# The output should be 1.5, 2.5, 3.0, 3.5, 4.5"
+    "# The output should be 1.5, 2.5, 3.0, 3.5, 4.5\n"
    ]
   },
   {
@@ -555,13 +548,10 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print \"Testing: fraction of cats = %.1f\" % fractions[\"cat\"]\n",
-    "print \"CORRECT\" if fractions[\"cat\"] ==.4 else \"INCORRECT\""
+    "print(\"Testing: fraction of cats = %.1f\" % fractions[\"cat\"])\n",
+    "print(\"CORRECT\" if fractions[\"cat\"] == .4 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -620,16 +610,14 @@
     "p_box_a = ...\n",
     "p_box_b = ...\n",
     "\n",
-    "\n",
     "...\n",
     "...\n",
     "...\n",
     "\n",
-    "    \n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
-    "print p_box_a\n",
-    "print p_box_b"
+    "print(p_box_a)\n",
+    "print(p_box_b)\n"
    ]
   },
   {
@@ -654,21 +642,17 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "def likeliest_box(color):\n",
-    "    \n",
-    "    \n",
     "    # The probability that someone picked a ball from box A or from box B\n",
     "    # If we set both of these to 0.5, then this means that a box was chosen completely at random\n",
     "    # Modify these values to see how the likelihood of the two boxes changes.\n",
     "    prior_box_a = 0.5\n",
     "    prior_box_b = 0.5\n",
-    "    \n",
     "\n",
     "    # P(box A | color) is proportional to P(color | box A) * P(box A)\n",
     "    # Hint use the prior_box_a variable and the p_box_a counter from the cell above.\n",
     "    p_box_a_color = ...\n",
     "    p_box_b_color = ...\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Which of the two boxes is likelier? Complete the following if statement\n",
     "    # such that likely_box is assigned Box A if the ball came most likely from Box A\n",
     "    # and Box B if it most likely came from the other box.\n",
@@ -676,24 +660,23 @@
     "        likely_box = \"Box A\"\n",
     "    else:\n",
     "        likely_box = \"Box B\"\n",
-    "        \n",
+    "\n",
     "    return likely_box\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
+    "print(\"Balls in Box A:\")\n",
+    "print(Counter(box_a))\n",
+    "print(\"Balls in Box B:\")\n",
+    "print(Counter(box_b))\n",
     "\n",
-    "print \"Balls in Box A:\"\n",
-    "print Counter(box_a)\n",
-    "print \"Balls in Box B:\"\n",
-    "print Counter(box_b)\n",
-    "\n",
-    "print \"\"\n",
+    "print(\"\")\n",
     "\n",
     "colors = [\"red\", \"green\", \"blue\", \"yellow\", \"orange\"]\n",
     "\n",
     "for color in colors:\n",
-    "    print \"A %s ball most likely came from %s\" % (color, likeliest_box(color))\n"
+    "    print(\"A %s ball most likely came from %s\" % (color, likeliest_box(color)))\n"
    ]
   },
   {
@@ -724,54 +707,50 @@
     "\n",
     "\n",
     "def likeliest_box(colors):\n",
-    "    \n",
-    "    \n",
     "    # The probability that someone picked a ball from box A or from box B\n",
     "    # If we set both of these to 0.5, then this means that a box was chosen completely at random\n",
     "    # Modify these values to see how the likelihood of the two boxes changes.\n",
     "    prior_box_a = 0.5\n",
     "    prior_box_b = 0.5\n",
-    "    \n",
     "\n",
     "    # P(box A | color1, color2, color3, ...) is proportional to \n",
     "    #      P(box A) * P(color1 | box A)  * P(color2 | box A) * P(color3 | box A) * ...\n",
     "    # Hint use the prior_box_a variable and the p_box_a counter from above.\n",
     "    p_box_a_colors = ...\n",
     "    p_box_b_colors = ...\n",
-    "    \n",
+    "\n",
     "    for color in colors:\n",
     "        ...\n",
     "        ...\n",
-    "        \n",
+    "\n",
     "    # Which of the two boxes is likelier? Complete the following if statement.\n",
     "    if __________________:\n",
     "        likely_box = \"Box A\"\n",
     "    else:\n",
     "        likely_box = \"Box B\"\n",
-    "        \n",
+    "\n",
     "    return likely_box\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
+    "print(\"Balls in Box A:\")\n",
+    "print(Counter(box_a))\n",
+    "print(\"Balls in Box B:\")\n",
+    "print(Counter(box_b))\n",
     "\n",
-    "print \"Balls in Box A:\"\n",
-    "print Counter(box_a)\n",
-    "print \"Balls in Box B:\"\n",
-    "print Counter(box_b)\n",
-    "\n",
-    "print \"\"\n",
+    "print(\"\")\n",
     "\n",
     "sequences = [[\"red\"], [\"green\"], [\"blue\"], [\"yellow\"], [\"orange\"],\n",
-    "            [\"red\", \"red\", \"green\"],\n",
-    "            [\"red\", \"green\", \"green\"],\n",
-    "            [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
-    "            [\"yellow\", \"orange\"],\n",
-    "            [\"yellow\", \"green\"],\n",
-    "            [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
+    "             [\"red\", \"red\", \"green\"],\n",
+    "             [\"red\", \"green\", \"green\"],\n",
+    "             [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
+    "             [\"yellow\", \"orange\"],\n",
+    "             [\"yellow\", \"green\"],\n",
+    "             [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
     "\n",
     "for seq in sequences:\n",
-    "    print \"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq))\n"
+    "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
    ]
   },
   {
@@ -801,71 +780,68 @@
     "\n",
     "number_of_boxes = 4\n",
     "\n",
-    "boxes = lib.get_box_contents(n_boxes = number_of_boxes)\n",
+    "boxes = lib.get_box_contents(n_boxes=number_of_boxes)\n",
     "\n",
     "for i, box in enumerate(boxes):\n",
-    "    print \"Box %d has %d balls.\" % (i + 1, len(box))\n",
-    "    \n",
-    "    \n",
+    "    print(\"Box %d has %d balls.\" % (i + 1, len(box)))\n",
+    "\n",
+    "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "# Estimate the conditional probabilities for each box.\n",
-    "\n",
     "\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
     "def likeliest_box(colors):\n",
-    "\n",
     "    #### YOUR CODE STARTS HERE ####\n",
     "\n",
     "    priors = []\n",
     "    for box in boxes:\n",
     "        priors.append(1.0 / len(boxes))\n",
-    "    \n",
+    "\n",
     "    scores = []\n",
-    "    \n",
+    "\n",
     "    ...\n",
-    "    \n",
+    "\n",
     "    likeliest_box = ...\n",
-    "    \n",
+    "\n",
     "    return \"Box %d\" % likeliest_box\n",
-    "  \n",
+    "\n",
     "    #### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
     "sequences = [[\"red\"], [\"green\"], [\"blue\"], [\"yellow\"], [\"orange\"],\n",
-    "            [\"red\", \"red\", \"green\"],\n",
-    "            [\"red\", \"green\", \"green\"],\n",
-    "            [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
-    "            [\"yellow\", \"orange\"],\n",
-    "            [\"yellow\", \"green\"],\n",
-    "            [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
+    "             [\"red\", \"red\", \"green\"],\n",
+    "             [\"red\", \"green\", \"green\"],\n",
+    "             [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
+    "             [\"yellow\", \"orange\"],\n",
+    "             [\"yellow\", \"green\"],\n",
+    "             [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
     "\n",
     "for seq in sequences:\n",
-    "    print \"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq))\n"
+    "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
